--- a/templates/index_x.html
+++ b/templates/index_x.html
@@ -8,8 +8,8 @@
 </head>
 <body>  
     <h1><font color= "#2C265D"><b> <font face = "MS Sans serif"><center><font size = "4">KMUTNB STUDENTS TABLE</center></b></h1>
-    <table border="2" bordercolor = 'red' width="100%" align="center" bgcolor="#FFD9EA" >   
-        <tr bgcolor="#F06C7C">
+    <table border="2" bordercolor = '#322975' width="100%" align="center" bgcolor="#FFD9EA" >   
+        <tr bgcolor="#cbaed7">
             <th>student-id</th>
             <th>student-f_name</th>
             <th>student-l_name</th>
